...
    final numericRegex = RegExp(r'^-?(([0-9]*)|(([0-9]*)\.([0-9]*)))$');
    return numericRegex.hasMatch(str);
  }

  String? validateEmail(String val) {
    if (val.isEmpty) {
      return "Email can not be empty";
    } else if (!EmailValidator.validate(val, true)) {
      return "Invalid Email Address";
    }
    return '';
  }

...
  final _rationTypes = [
    "Select ration type...",
    "NM",
    "M",
    "VI",
    "VC",
    "SD NM",
    "SD M",
    "SD VI",
    "SD VC"
  ];

  final _ranks = [
...
    "REC",
    "PTE",
    "LCP",
    "CPL",
    "CFC",
    "SCT",
    "3SG",
    "2SG",
    "1SG",
    "SSG",
    "MSG",
    "3WO",
    "2WO",
...
    "LG",
  ];

  final _bloodTypes = [
    "Select blood type...",
    "O-",
    "O+",
    "B-",
    "B+",
    "A-",
    "A+",
    "AB-",
    "AB+",
...
          (_name.text.titleCase.trim() == '' ||
              _isNumeric(_name.text.titleCase.trim()) == false)) {
        //creating user
        UserCredential result =
            await FirebaseAuth.instance.createUserWithEmailAndPassword(
          email: _emailId.text.trim(),
          password: _password.text.trim(),
        );
        User user = result.user!;
        user.updateDisplayName(_name.text.trim());
        //Adding user details
        addUserDetails();
        addAttendanceDetails();
...
  Future addUserDetails() async {
    await FirebaseFirestore.instance
        .collection('Users')
        .doc(_name.text.titleCase.trim())
        .set({
      //User map formatting
      'name': _name.text.titleCase.trim(),
      'rank': selectedRank,
      'company': _company.text.trim(),
      'platoon': _platoon.text.trim(),
      'section': _section.text.trim(),
      'appointment': _appointment.text.trim(),
      'rationType': selectedItem,
      'bloodgroup': selectedBloodType,
      'dob': dob,
      'ord': ord,
      'enlistment': enlistment,
      'points': 0,
    });
...
                            decoration: BoxDecoration(
                              color: Colors.black54,
                              border: Border.all(color: Colors.white),
                              borderRadius: BorderRadius.circular(12.r),
                            ),
                            child: DropdownButtonFormField<String>(
                              key: const Key("bloodType"),
                              validator: (value) {
                                if (value == "Select your blood type...") {
                                  return 'Why your blood field empty ah?';
                                }
                                return null;
                              },
...
                        border: Border.all(color: Colors.white),
                        borderRadius: BorderRadius.circular(12.r),
                      ),
                      child: Padding(
                        padding: EdgeInsets.only(left: 20.w),
                        child: TextFormField(
                          key: const Key("confirmPassword"),
                          validator: (value) {
                            if (_isvalidPassword(value!) == false) {
                              return validatePassword(value);
                            } else if (_password.text.trim() ==
                                _confirmedpassword.text.trim()) {
                              return null;
...
                    SizedBox(height: 10.h),

                    // sign in
                    Padding(
                      padding: EdgeInsets.symmetric(horizontal: 25.0.w),
                      child: GestureDetector(
                        key: const Key("signUpButton"),
                        onTap: () {
                          if (_formKey.currentState!.validate()) {
                            IconSnackBar.show(
                                duration: const Duration(seconds: 4),
                                direction: DismissDirection.horizontal,
                                context: context,
...
